--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "parcel index.html ./articles/*.html",
-    "prod": "parcel build index.html",
+    "prod": "parcel build index.html ./articles/*.html",
     "start": "parcel index.html"
   },
   "repository": {
